# Aide

./: .gitignore  README.md  config.py  main.py  pyproject.toml  test_main.http
agent/: langchain_react_agent.py  langgraph_react_agent.py  react_agent.py
chat/: ollama_chat.py  zhipu_chat.py
logs/: logging_server.py
memory/: __init__.py  embedder.py  models.py  service.py  store.py
sql/memory/: 001_init_agent_memory.sql
tools/: can_tools.py  file_tool.py  terminal_tool.py  web_tool.py
ui/: app.js  index.html  style.css
